syntax="proto3";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
//import "attachment.proto";
import "error.proto";


message Orgz {
 int32 id=1;
 google.protobuf.Any specs=2;
 optional int32 ownerId=3;
 repeated Orgz branches=4;
 optional google.protobuf.Timestamp created_at=5;
 optional google.protobuf.Timestamp updated_at=6;
}

message CreateOrgzReq {
  int32 ownerId=1;
  Orgz orgz=2;
}

message CreateSubOrgzRes {
  optional  int32 ownerId=1;
  Orgz branch=2;
}
message CreateSubOrgzReq {
  int32 ownerId=1;
  int32 parentorgzId=2;
  Orgz branch=3;
}

message CreateOrgzRes {
  optional  int32 ownerId=1;
  Orgz orgz=2;
}

message GetAllOrgzsReq {
 optional int32 ownerId=1;
}

message GetAllOrgzsRes {
 repeated Orgz orgzs=1;
 optional Error error=2;
 
}

service OrgzService {
  rpc create(CreateOrgzReq) returns(
  CreateOrgzRes);
  rpc branch_create(CreateSubOrgzReq) returns(
  CreateSubOrgzRes);
  rpc all(GetAllOrgzsReq) returns (GetAllOrgzsRes);
}
